2008-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c: Fix bug with attributes becoming appended to
	themselves.  Resolves SF issue 2255754. Reflowed code.

2008-11-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.3 released.
	* www/OpenMP.rst: Updated with latest measurement data.
	* www/benchmarks.rst: Updated with latest benchmark data.
	* coders/url.c (RegisterURLImage): Register HTTP and FTP URL
	support in the "unstable" category since these are capable of
	accessing the network and therefore represent a potential security
	issue.  Register the FILE URL support in the "stable" category
	since it is capable of incorporating local disk files, which may
	still represent a security security issue for server applications.
	Note that disabling these functions might cause some existing MSL,
	MVG and SVG scripts to stop working if they use external URLs.

2008-11-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (ReadPNMImage): Sequential multi-thread the PNM raw
	format readers. Can improve read performance quite substantially
	for large PBM and PGM files, and less so for PPM.  There is most
	benefit for systems with more I/O than one CPU core will support.
	Systems with slow I/O and a relatively fast CPU may see somewhat
	diminished read performance with more CPU consumption.  As such,
	this is effectively a verification that multi-threading the reader
	is possible, and may be of benefit to power-users.
	* magick/omp_data_view.c (AllocateThreadViewDataArray): New
	function to allocate a thread view data array.  Updated modules
	using similar code to use this function in order eliminate
	useless redundancy.

2008-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c: Incorporate OMP thread views into the
	pixel cache so usage is less invasive.  Update OMP-enhanced source
	modules to suit.
	(GetImagePixelsEx): New function similar to GetImagePixels()