@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-11-11  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> GraphicsMagick.spec.in: Apply RPM spec file fixes from Giacomo
+        Tenaglia for Red Hat Linux 4.
+
+</UL>
+<p>
 2008-11-10  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
