@@ -1,3 +1,8 @@
+2008-11-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* GraphicsMagick.spec.in: Apply RPM spec file fixes from Giacomo
+	Tenaglia for Red Hat Linux 4.
+
 2008-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/msl.c: Fix bug with attributes becoming appended to
